# pico-ir-rec

./: CMakeLists.txt  LICENSE  README.md
inc/: ir_decoder.h  ir_driver.h
inc/protocols/: nec.h
src/: ir_driver.c  ir_sampler.pio
src/protocols/: nec.c
